# flapper

./: .gitignore  Cargo.toml  Dockerfile  Readme.md  example.json  local.yaml
.github/workflows/: ci.yml
dbs/: example.sqlite
src/: db.rs  main.rs
