[package]
name = "flapper"
version = "0.3.0"
edition = "2021"
authors = ["Jan-Simon Baudler <janbaudler@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
sqlite = "0.30.4"
